# chlorine

./: Pipfile  README.md  __init__.py  app.py  requirements.txt  schema.sql  setup.cfg  setup.py  translate.py
.github/workflows/: test.yml
Chlorine.egg-info/: PKG-INFO  SOURCES.txt
chlorine/: __init__.py  __main__.py  translate.py
chlorine/chlorine/: __init__.py  translate.py
chlorine/chlorine/docs/: conf.py  constants.rst  index.rst  translate.rst
docs/: index.rst  translate.rst
templates/: base.html  index.html
tests/: test_app.py  test_translate.py
