[metadata]

name = chlorine
version = 0.1.0
author = Fluorine Team
author_email = riceforever0208@outlook.com
description = The core part of project fluorine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rice0208/chlorine
project_urls = 
    Bug Tracker = https://github.com/rice0208
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .